# musical-llm

./: README.md  pyproject.toml
docs/: augmented_scale.md  diminished_scale.md  japan_scales.md  major_scales.md  middle_east_scales.md  minor_scales.md  modal_scales.md  penta_blues_scales.md  polynesian_scales.md  relative_keys.md  whole_tone_scale.md
music_theory/: scales.py
tests/: test_scales.py
