[tool.poetry]
name = "music-theory"
version = "0.1.0"
description = "A library to provide some concise musical theory for training/testing LLMs"
authors = ["Chris Chamberlain <chrisbc@artisan.co.nz>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "[^3.11]"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
