[tool.poetry]
name = "music-theory"
version = "0.1.0"
description = "A library to provide some concise musical theory for training/testing LLMs"
authors = ["Chris Chamberlain <chrisbc@artisan.co.nz>"]
license = "AGPL3"
readme = "README.md"

packages = [
	{include = "music_theory"},
    {include = "tests" }
]

[tool.poetry.dependencies]
python = ">=3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
